refactor : 이름 일급컬렉션으로 생성할 수 있도록 변경