@@ -1,23 +1,17 @@
 package domain;
 
 import domain.vo.Name;
-import domain.vo.Position;
-import org.assertj.core.groups.Tuple;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.CsvSource;
 import strategy.MovementStrategy;
-import strategy.RandomMovementStrategyStrategy;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.tuple;
-import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 class CarsTest {
 
@@ -25,61 +19,56 @@ class CarsTest {
     @DisplayName("차 이름들을 인자로 받아 초기화한다")
     void create_with_car_names() {
         //given
-        String[] carNames = new String[]{"name1", "name2", "name3"};
+        List<Name> names =
+                Arrays.asList(new Name("name1"), new Name("name2"), new Name("name3"));
+        Names carNames = new Names(names);
         Cars cars = new Cars(carNames);
 
         //when
         List<Car> actual = cars.elements();
 
         //then
-        assertThat(actual).containsExactly(new Car("name1"), new Car("name2"), new Car("name3"));
+        assertThat(actual).extracting("name.value", "position.value")
+                .containsExactly(
+                        tuple("name1", 0),
+                        tuple("name2", 0),
+                        tuple("name3", 0));
     }
 
     @Test
     @DisplayName("차 요소들로 초기화 한다")
     void create_with_cars() {
         //given
-        List<Car> elements = Arrays.asList(new Car("name1"), new Car("name2"), new Car("name3"));
+        List<Car> elements = Arrays.asList(new Car("name1", 1),
+                new Car("name2", 2), new Car("name3", 3));
         Cars cars = new Cars(elements);
 
         //when
         List<Car> actual = cars.elements();
 
         //then
-        assertThat(actual).containsExactly(new Car("name1"), new Car("name2"), new Car("name3"));
+        assertThat(actual).extracting("name.value", "position.value")
+                .containsExactly(
+                        tuple("name1", 1),
+                        tuple("name2", 2),
+                        tuple("name3", 3));
     }
 
     @ParameterizedTest
-    @MethodSource(value = "driveAllTestCase")
+    @CsvSource(value = {"true, 2", "false, 1"})
     @DisplayName("모든 차를 운행시킨다")
-    void driveAll(final boolean randomValue, Tuple firstExpected, Tuple secondExpected) {
+    void driveAll(final boolean randomValue, final int expectedPosition) {
         //given
-        List<Car> elements = Arrays.asList(new Car("name1", 1), new Car("name2", 2));
+        List<Car> elements = List.of(new Car("name1", 1));
         Cars cars = new Cars(elements);
-        MovementStrategy movementStrategy = new RandomMovementStrategyStrategy() {
-            @Override
-            protected boolean generateRandom() {
-                return randomValue;
-            }
-        };
+        MovementStrategy movementStrategy = () -> randomValue;
 
         //when
         Cars droveCars = cars.driveAll(movementStrategy);
 
         //then
-        assertThat(droveCars.elements()).extracting("name", "position")
-                .containsExactly(firstExpected, secondExpected);
-    }
-
-    static Stream<Arguments> driveAllTestCase() {
-        return Stream.of(
-                arguments(true,
-                        tuple(new Name("name1"), new Position(2)),
-                        tuple(new Name("name2"), new Position(3))),
-                arguments(false,
-                        tuple(new Name("name1"), new Position(1)),
-                        tuple(new Name("name2"), new Position(2)))
-        );
+        assertThat(droveCars.elements()).extracting("position.value")
+                .containsExactly(expectedPosition);
     }
 
     @Test
@@ -94,6 +83,9 @@ class CarsTest {
         List<Car> maxPositionCars = cars.findMaxPositionCars();
 
         //then
-        assertThat(maxPositionCars).containsExactly(new Car("name1", 2), new Car("name2", 2));
+        assertThat(maxPositionCars).extracting("name.value", "position.value")
+                .containsExactly(
+                        tuple("name1", 2),
+                        tuple("name2", 2));
     }
 }
